# VisionMLBN-for-audio-datasets

./: .gitignore  Makefile  README.md  environment_dev_dummy.yml  pyproject.toml  requirements.txt
configs/: tiny_esc10.yaml  tiny_esc10_epoch20.yaml  tiny_esc10_epoch50.yaml  tiny_esc5_epoch20.yaml  tiny_full.yml  tiny_smoke.yaml
environment/: README.md  hpc_environment_snapshot.txt
results/: README.md
scripts/: preprocess_audio_to_spectrogram.py  preprocess_esc10.py  preprocess_esc5.py  preprocess_esc50.py  requirements_routeA.txt  train_mfcc_mlp.py  train_mfcc_svm.py  train_resnet.py  train_tiny_imagenet.py
scripts/diagnostics/: causal_conv1d_check.py  profile_model.py  verify_vim_dummy.py
scripts/pic_process/: Mel  epoch10  epoch5  esc10loss  esc5loss
scripts/plots/: plot_esc10_accuracy.py  plot_esc10_loss.py  plot_esc5_accuracy.py  plot_esc5_loss.py  plot_mel_filter_bank.py
scripts/preprocessing/: preprocess_audio_to_spectrogram.py  preprocess_esc10.py  preprocess_esc5.py  preprocess_esc50.py
scripts/training/: train_mfcc.py  train_vision_mlbn.py
src/: profile_model.py
src/vision_mlbn/: MLBN.py  VisionMLBN.py
